# STM32-GUI-Builder

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HOW_IT_WORKS.md  LICENSE  README.md  SECURITY.md  USAGE.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  build_settings.yaml  tauri.conf.json
src-tauri/src/: build_combinations.rs  build_config_gen.rs  builder.rs  cancel.rs  config.rs  defaults.rs  ld_files.rs  lib.rs  logging.rs  main.rs  models.rs  process.rs  utils.rs
src/components/: AdditionalOptions.vue  BuildControls.vue  BuildLogs.vue  BuildSettings.vue  BuildStatus.vue  CleanBuildOption.vue  ProjectSettings.vue
src/composables/: useBuildProcess.ts  useLocalStorage.ts  useLogHandler.ts
src/services/: buildService.ts
src/types/: build.ts  index.ts
src/utils/: range-parser.ts  time.ts
