[package]
name = "my-builder-app"
description = "Stm32 builder"
version = "0.1.0"
authors = ["Artem Gilemyanov"]
edition = "2024"
license = "MIT License"

[dependencies]
notify = "5.0"
quick-xml = "0.31.0"  
tauri = { version = "2.5.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
tauri-plugin-dialog = "2.0"
tauri-plugin-opener = "2.0"
anyhow = "1.0"
lazy_static = "1.4.0"
sysinfo = "0.29.11"
lock_api = "0.4.12"
tempfile = "3.10.1"
chrono = "0.4.38"
tokio = { version = "1.44.2", features = ["full", "time"] }
winapi = { version = "0.3", features = ["processthreadsapi", "wincon"] } # Для Windows
nix = { version = "0.29", features = ["process", "signal"] } # Для Unix-подобных систем
serde_yaml = "0.9"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }










