[package]
name = "my-builder-app"
description = "Stm32 builder"
version = "0.1.0"
authors = ["Artem Gilemyanov"]
edition = "2024"
license = "MIT License"

[dependencies]
notify = "8.0.0"
quick-xml = "0.37.5"
tauri = { version = "2.2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
regex = "1.10.0"
tauri-plugin-dialog = "2.2.1"
tauri-plugin-opener = "2.2.6"
anyhow = "1.0.81"
lazy_static = "1.4.0"
sysinfo = "0.35.1"
lock_api = "0.4.12"
tempfile = "3.20.0"
chrono = "0.4.41"
tokio = { version = "1.43.0", features = ["full", "time"] }
winapi = { version = "0.3", features = ["processthreadsapi", "wincon"] }
nix = { version = "0.29.0", features = ["process", "signal"] }
serde_yaml = "0.9.32"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }










